--- a/html/index.html
+++ b/html/index.html
@@ -31,7 +31,7 @@
                 </li>
 
                 <li>
-                    <a href="schedule.html.html">Schedule</a>
+                    <a href="schedule.html">Schedule</a>
                 </li>
 
                 <li>
@@ -77,12 +77,10 @@
             <section class="teaser col-1-3">
                 <h5>Venue</h5>
                 <a href="venue.html">
-                    <img src="../images/venue.jpg" alt="Venue">
-                    <h3>The Chicago theatre</h3>
+                <img src="../images/venue.jpg" alt="Venue">
+                <h3>The Chicago Theatre</h3>
                 </a>
-                <p>
-                    "Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue."
-                </p>
+                <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
             </section>
         </div>
     </section>
